--- a/source/form.html
+++ b/source/form.html
@@ -11,9 +11,13 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo">
-      <!-- logo -->
-      <img src="https://www.placecage.com/102/84">
+    <a class="page-header__logo" href="index.html">
+      <picture>
+        <source media="(min-width: 1200px)" srcset="img/vector/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/vector/logo-tablet.svg">
+        <img class="page-header__logo-image" src="img/vector/logo-mobile.svg" width="102" height="84"
+          alt="Логотип города Седоны">
+      </picture>
     </a>
     <nav class="page-header__main-nav main-nav main-nav--nojs">
       <ul class="main-nav__list">
@@ -35,7 +39,8 @@
       </button>
     </nav>
     <div class="page-header__intro intro intro--short">
-      <img class="intro__slogan intro__slogan--short" src="https://www.placecage.com/229/39">
+      <img class="intro__slogan intro__slogan--short" src="img/vector/intro-text-inner.svg"
+        alt="Приветствие города Седоны">
     </div>
   </header>
 
