--- a/source/catalog.html
+++ b/source/catalog.html
@@ -156,20 +156,38 @@
 
   <footer class="footer">
     <a class="footer__tag" href="#">#visitsedona</a>
-    <ul class="footer__social">
-      <li class="footer__item">
-        <a>Твиттер</a>
+    <ul class="footer__social social">
+      <li class="social__item">
+        <a class="social__link" aria-label="Мы в Твиттере">
+          <svg width="18" height="15">
+            <use xlink:href="img/sprite.svg#icon-twitter"></use>
+          </svg>
+        </a>
       </li>
-      <li class="footer__item">
-        <a>Фейсбук</a>
+      <li class="social__item">
+        <a class="social__link" aria-label="Мы в Фейсбуке">
+          <svg width="9" height="19">
+            <use xlink:href="img/sprite.svg#icon-facebook"></use>
+          </svg>
+        </a>
       </li>
-      <li class="footer__item">
-        <a>Ютуб</a>
+      <li class="social__item">
+        <a class="social__link" aria-label="Мы в Ютубе">
+          <svg width="20" height="14">
+            <use xlink:href="img/sprite.svg#icon-youtube"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-    <p class="footer__copyright">Разработано
-      <a href="#">лого академии</a>
-    </p>
+    <div class="footer__copyright copyright">
+      <p class="copyright__text">Разработано</p>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"
+        aria-label="Онлайн-курс HTML Academy «Адаптивная вёрстка сайтов и автоматизация»">
+        <svg class="copyright__icon" width="27" height="34">
+          <use xlink:href="img/sprite.svg#htmlacademy"></use>
+        </svg>
+      </a>
+    </div>
   </footer>
   <script src="js/script.js" type="module"></script>
 </body>
