--- a/source/catalog.html
+++ b/source/catalog.html
@@ -232,7 +232,7 @@
     </footer>
 
   </div>
-  <script src="js/script.js" type="module"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
