--- a/source/form.html
+++ b/source/form.html
@@ -174,7 +174,7 @@
 
   </div>
 
-  <script src="js/script.js" type="module"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
