--- a/source/index.html
+++ b/source/index.html
@@ -179,7 +179,7 @@
     <h2 class="modal__heading">Бизнес-тарифы</h2>
   </section> -->
 
-  <script src="js/script.min.js" type="module"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
